fix text align bug

--- a/src/components/TripOverview.css
+++ b/src/components/TripOverview.css
@@ -24,6 +24,6 @@
   border-radius: 50%; /* 使其成为圆形 */
 }
 
-p {
+.overview p {
   text-align: justify;
 }
